--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,38 @@
 <!--</div>-->
 
 <!--directives-->
-<div class="directive">
+<!--<div class="directive">-->
 
 
-<p [appStyle]="'red'" [fontWeight]="'bold'" [dStyles]="{border: '1px solid blue'}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias ea eveniet laboriosam sint tempora. Cum maxime nisi recusandae rerum temporibus? Blanditiis incidunt labore laboriosam nisi non soluta, veritatis! Iste, reprehenderit.10</p>
+<!--<p [appStyle]="'red'" [fontWeight]="'bold'" [dStyles]="{border: '1px solid blue'}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias ea eveniet laboriosam sint tempora. Cum maxime nisi recusandae rerum temporibus? Blanditiis incidunt labore laboriosam nisi non soluta, veritatis! Iste, reprehenderit.10</p>-->
 
 
+<!--</div>-->
+
+<!--pipes-->
+
+<!--<div class="pipes">-->
+<!--&lt;!&ndash;  <span>Angular PIPES</span>&ndash;&gt;-->
+
+<!--&lt;!&ndash;  <p>{{num | number: '2.1-3' }}</p>&ndash;&gt;-->
+
+<!--  <strong>{{str | uppercase | slice:-2}}</strong>-->
+
+<!--  <p>{{ 10 | mult:3 }}</p>-->
+
+
+<!--  <p>{{'hello,                   world' |  exMatrk}}</p>-->
+
+<!--</div>-->
+
+<div class="find">
+  <button (click)="searchFilter='title'">Title</button>
+  <button (click)="searchFilter='name'">Name</button>
+
+  <input type="text" [(ngModel)]="search">
+
+</div>
+<div class="corona" *ngFor="let post of newPost | searchFilterCustom: search:searchFilter">
+  <h1>{{post.title}}</h1>
+  <h2>{{post.name}}</h2>
 </div>
