added pure:false for detect dynamic changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,7 @@
   <button (click)="searchFilter='title'">Title</button>
   <button (click)="searchFilter='name'">Name</button>
 
+  <button (click)="addNewPost()">Add New PoSt</button>
   <input type="text" [(ngModel)]="search">
 
 </div>
