--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,51 +11,54 @@
 <!--  <h2>NEWWWWW</h2>-->
 <!--</div>-->
 
-<!--directives-->
-<!--<div class="directive">-->
+<div class="container">
+  <form class="card">
+    <h1>Angular Forms</h1>
 
+    <div class="form-control">
+      <label>Email</label>
+      <input type="text" placeholder="Email">
+      <div class="validation"></div>
+    </div>
 
-<!--<p [appStyle]="'red'" [fontWeight]="'bold'" [dStyles]="{border: '1px solid blue'}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias ea eveniet laboriosam sint tempora. Cum maxime nisi recusandae rerum temporibus? Blanditiis incidunt labore laboriosam nisi non soluta, veritatis! Iste, reprehenderit.10</p>-->
+    <div class="form-control">
+      <label>Пароль</label>
+      <input type="password" placeholder="Пароль">
+      <div class="validation"></div>
+    </div>
 
+    <div class="card">
+      <h2>Адрес</h2>
 
-<!--</div>-->
+      <div class="form-control">
+        <label>Страна</label>
 
-<!--pipes-->
+        <select>
+          <option value="ru">Россия</option>
+          <option value="ua">Украина</option>
+          <option value="by">Беларусь</option>
+        </select>
+      </div>
 
-<!--<div class="pipes">-->
-<!--&lt;!&ndash;  <span>Angular PIPES</span>&ndash;&gt;-->
+      <div class="form-control">
+        <input type="text">
+      </div>
 
-<!--&lt;!&ndash;  <p>{{num | number: '2.1-3' }}</p>&ndash;&gt;-->
+      <button class="btn">Выбрать столицу</button>
+    </div>
 
-<!--  <strong>{{str | uppercase | slice:-2}}</strong>-->
+    <div class="card">
+      <h2>Ваши навыки</h2>
+      <button class="btn">Добавить умение</button>
+      <div class="form-control">
+        <label></label>
+        <input type="text">
+      </div>
+    </div>
 
-<!--  <p>{{ 10 | mult:3 }}</p>-->
+    <button class="btn">Отправить</button>
 
-
-<!--  <p>{{'hello,                   world' |  exMatrk}}</p>-->
-
-<!--</div>-->
-
-<!--<div class="find">-->
-<!--  <button (click)="searchFilter='title'">Title</button>-->
-<!--  <button (click)="searchFilter='name'">Name</button>-->
-
-<!--  <button (click)="addNewPost()">Add New PoSt</button>-->
-<!--  <input type="text" [(ngModel)]="search">-->
-
-<!--</div>-->
-<!--<div class="corona" *ngFor="let post of newPost | searchFilterCustom: search:searchFilter">-->
-<!--  <h1>{{post.title}}</h1>-->
-<!--  <h2>{{post.name}}</h2>-->
-<!--</div>-->
-
-
-<!--**********************************************ASYNC PIPES**************************************************-->
-
-<div class="promise">
- Wait for it...  {{promise | async}}
+  </form>
 </div>
 
-<div class="observable">
-  Wait for {{observData | async | date}}
-</div>
+
