added reactive form validators full

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,15 @@
 .blue {
   background-color: blue;
 }
+
+input {
+
+  &.ng-invalid.ng-touched {
+    border: 1px solid red;
+  }
+
+  &.ng-valid.ng-touched {
+    border: 1px solid green;
+  }
+
+}
