--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,19 +12,40 @@
 <!--</div>-->
 
 <div class="container">
-  <form class="card">
+  <form class="card" [formGroup]="form" (ngSubmit)="submit()" >
     <h1>Angular Forms</h1>
 
     <div class="form-control">
       <label>Email</label>
-      <input type="text" placeholder="Email">
-      <div class="validation"></div>
+      <input type="text" placeholder="Email" formControlName="email">
+
+      <div class="validation" *ngIf="form.get('email').invalid && form.get('email').touched">
+        <small *ngIf="form.get('email').errors.required">
+          Поле email не может быть пустым
+        </small>
+
+        <small *ngIf="form.get('email').errors.em">
+          Введите корректный email
+        </small>
+
+      </div>
     </div>
 
     <div class="form-control">
       <label>Пароль</label>
-      <input type="password" placeholder="Пароль">
-      <div class="validation"></div>
+
+      <input type="password" placeholder="Пароль" formControlName="password">
+      <div class="validation" *ngIf="form.get('password').invalid && form.get('password').touched">
+        <small *ngIf="form.get('password').errors.required">
+          Пароль не может быть пустым
+        </small>
+
+        <small *ngIf="form.get('password').errors.minlength">
+            длинна должна быть не менее {{form.get('password').errors.minlength.requiredLength}}
+          текущее количество символов: {{form.get('password').errors.minlength.actualLength}}
+        </small>
+      </div>
+
     </div>
 
     <div class="card">
@@ -44,19 +65,19 @@
         <input type="text">
       </div>
 
-      <button class="btn">Выбрать столицу</button>
+      <button class="btn" type="button">Выбрать столицу</button>
     </div>
 
     <div class="card">
       <h2>Ваши навыки</h2>
-      <button class="btn">Добавить умение</button>
+      <button class="btn" type="button">Добавить умение</button>
       <div class="form-control">
         <label></label>
         <input type="text">
       </div>
     </div>
 
-    <button class="btn">Отправить</button>
+    <button class="btn" type="submit" [disabled]="form.invalid" >Отправить</button>
 
   </form>
 </div>
