--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,29 +51,29 @@
     <div class="card">
       <h2>Адрес</h2>
 
-      <div class="form-control">
+      <div class="form-control" formGroupName="address">
         <label>Страна</label>
 
-        <select>
+        <select formControlName="country">
           <option value="ru">Россия</option>
           <option value="ua">Украина</option>
           <option value="by">Беларусь</option>
         </select>
       </div>
 
-      <div class="form-control">
-        <input type="text">
+      <div class="form-control" formGroupName="address">
+        <input type="text" formControlName="city" placeholder="Город">
       </div>
 
       <button class="btn" type="button">Выбрать столицу</button>
     </div>
 
-    <div class="card">
+    <div class="card" formGroupName="skills">
       <h2>Ваши навыки</h2>
-      <button class="btn" type="button">Добавить умение</button>
-      <div class="form-control">
-        <label></label>
-        <input type="text">
+      <button class="btn" type="button" (click)="addSkill()">Добавить умение</button>
+      <div class="form-control" *ngFor="let control of form.get('skills').controls; let idx = index" >
+        <label> Умение {{idx+1}}</label>
+        <input type="text" [formControlName]="idx">
       </div>
     </div>
 
