--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,10 @@
            email {{form.get('email').value}} запрещен
         </small>
 
+        <small *ngIf="form.get('email').errors.uniqEmail">
+          EMAIL ЗААААНЯТ
+        </small>
+
       </div>
 
     </div>
@@ -82,7 +86,7 @@
       </div>
     </div>
 
-    <button class="btn" type="submit" [disabled]="form.invalid" >Отправить</button>
+    <button class="btn" type="submit" [disabled]="form.invalid || form.pending" >Отправить</button>
 
   </form>
 </div>
