--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="new">
-  {{testData.title}}
+  {{testData?.title}}
 </div>
 
+<div class="">
+  <span>Works good</span>
+</div>
+
+<router-outlet></router-outlet>
